syntax = "proto3";

package rentchain.assets;

import "amino/amino.proto";
import "cosmos/msg/v1/msg.proto";
import "cosmos_proto/cosmos.proto";
import "gogoproto/gogo.proto";
import "google/protobuf/any.proto";
import "rentchain/assets/params.proto";
import "rentchain/assets/asset.proto";

option go_package = "github.com/gopherine/rentchain/x/assets/types";

// Msg defines the Msg service.
service Msg {
  option (cosmos.msg.v1.service) = true;
  
  // UpdateParams defines a (governance) operation for updating the module
  // parameters. The authority defaults to the x/gov module account.
  rpc UpdateParams (MsgUpdateParams) returns (MsgUpdateParamsResponse);
  rpc CreateAsset  (MsgCreateAsset ) returns (MsgCreateAssetResponse );
  rpc UpdateAsset  (MsgUpdateAsset ) returns (MsgUpdateAssetResponse );
  rpc DeleteAsset  (MsgDeleteAsset ) returns (MsgDeleteAssetResponse );
}
// MsgUpdateParams is the Msg/UpdateParams request type.
message MsgUpdateParams {
  option (cosmos.msg.v1.signer) =                          "authority";
  option           (amino.name) = "rentchain/x/assets/MsgUpdateParams";
  
  // authority is the address that controls the module (defaults to x/gov unless overwritten).
  string authority = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  
  // params defines the module parameters to update.
  
  // NOTE: All parameters must be supplied.
  Params params = 2 [(gogoproto.nullable) = false, (amino.dont_omitempty) = true];
}

// MsgUpdateParamsResponse defines the response structure for executing a
// MsgUpdateParams message.
message MsgUpdateParamsResponse {}

message MsgCreateAsset {
  option (cosmos.msg.v1.signer) = "creator";
  string creator      = 1;
  string owner        = 2;
  string name         = 3;
  string description  = 4;
  string pricePerUnit = 5;
  string unit         = 6;
  repeated string tags = 7;
  google.protobuf.Any details = 8; // Flexible field for different asset types
}

message MsgCreateAssetResponse {
  uint64 id = 1;
}

message MsgUpdateAsset {
  option (cosmos.msg.v1.signer) = "creator";
  string creator      = 1;
  uint64 id           = 2; // Asset ID
  string name         = 3;
  string description  = 4;
  string pricePerUnit = 5;
  string unit         = 6;
  repeated string tags = 7;
  google.protobuf.Any details = 8;
}

message MsgUpdateAssetResponse {}

message MsgDeleteAsset {
  option (cosmos.msg.v1.signer) = "creator";
  string creator = 1;
  uint64 id      = 2; // Asset ID
}

message MsgDeleteAssetResponse {}

